Correction of the classical IaC part with Pulumi. The yaml files were added at the project root and the main file path was also configured in the pulumi.yaml. Then we need to set the PYTHON_PATH at the project and the main file can import python files from the Python root folder.

--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -4,3 +4,4 @@ runtime:
 backend:
   url: gs://gb-poc-pulumi-state/main
 description: A minimal Google Cloud Python Pulumi program
+main: pulumi_apps/classical_iac
