--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,13 @@ dependencies = [
 dev = [
     "pytest==8.4.2"
 ]
+
+[tool.setuptools]
+packages = ["pulumi_apps"]
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project.scripts]
+dwh = "pulumi_apps.automation_api.cli.main:run"
