Improvements in the Dockerfile to deploy the IaaC app, use more a conventional Linux path for the app path and add the home user path.

--- a/pulumi_apps/automation_api/iaas/bq_datasets_tables_creation_api/Dockerfile
+++ b/pulumi_apps/automation_api/iaas/bq_datasets_tables_creation_api/Dockerfile
@@ -1,28 +1,31 @@
 FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim AS builder
 
-WORKDIR /app
-
 ENV UV_COMPILE_BYTECODE=1 \
-    UV_LINK_MODE=copy
+    UV_LINK_MODE=copy \
+    WORKDIR=/usr/local/src/app
+
+WORKDIR $WORKDIR
 
 COPY pyproject.toml uv.lock ./
 
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --locked --no-install-project
 
-COPY pulumi_apps /app/pulumi_apps
+COPY pulumi_apps $WORKDIR/pulumi_apps
 
 FROM pulumi/pulumi-python:3.197.0
 
-WORKDIR /app
+ENV WORKDIR=/usr/local/src/app
+WORKDIR $WORKDIR
 
-COPY --from=builder /app /app
+COPY --from=builder $WORKDIR $WORKDIR
 
-ENV PATH="/app/.venv/bin:$PATH"
+ENV PATH="$WORKDIR/.venv/bin:$PATH"
 
-RUN adduser --disabled-password --gecos '' appuser && \
-    chown -R appuser /app
+RUN adduser --disabled-password --gecos '' --home /home/datasetscreatoruser datasetscreatoruser && \
+    chown -R datasetscreatoruser $WORKDIR
 
-USER appuser
+USER datasetscreatoruser
 
-CMD ["uvicorn", "pulumi_apps.automation_api.iaas.bq_datasets_tables_creation_api.main:app", "--host", "0.0.0.0", "--port", "8080"]
+ENTRYPOINT ["uvicorn"]
+CMD ["pulumi_apps.automation_api.iaas.bq_datasets_tables_creation_api.main:app", "--host", "0.0.0.0", "--port", "8080"]
